<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifsp.fbenutti.projetoos.OpcoesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/escolha_opcao"
        android:id="@+id/txtEscolhaOpcao"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/criar_os"
        android:id="@+id/txtCriarOS"
        android:layout_below="@+id/txtEscolhaOpcao"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibtnNovaOS"
        android:src="@drawable/add"
        android:layout_below="@+id/txtCriarOS"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/listagem_os"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnNivel"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog"
        android:entries="@array/niveis_array"
        android:prompt="@string/niveis_prompt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listagem_os_btn"
        android:id="@+id/btnListagemOS"
        android:layout_below="@+id/spnNivel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />
</RelativeLayout>
