<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView android:text="@string/titulo_app_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_marginTop="35sp"
        android:id="@+id/txtTituloAppMain" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/faca_login"
        android:id="@+id/txtFacaLogin"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/txtTituloAppMain"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usuario"
        android:id="@+id/txtUsuario"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtSenha"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/editUsuario"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editSenha"
        android:layout_below="@+id/txtSenha"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnLogar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUsuario"
        android:layout_below="@+id/txtUsuario"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editSenha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logar"
        android:id="@+id/btnLogar"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/txtTituloAppMain"
        android:layout_marginBottom="38dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/btnRegistrar"
        android:layout_alignBottom="@+id/btnLogar"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtSync"
        android:layout_below="@+id/btnRegistrar"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sync"
        android:id="@+id/btnSync"
        android:layout_below="@+id/txtTituloAppMain"
        android:onClick="onClick"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
